# EEE-Y3-arm

./: .gitignore  13:49:21.csv  15:07:54.csv  16:05:41.csv  README.md
arduino_motor_control/: arduino_motor_control.ino
arduino_stepper_controller/: arduino_stepper_controller.ino
arduino_stepper_controller/stepper_controller_pid/: stepper_controller_pid.ino
arm_pkg/: package.xml  setup.py
arm_pkg/arm_pkg/: camera_interface.py  controls_generator.py  hardware_interface.py  image_processor.py
arm_pkg/launch/: _launch.py
calibration/: calibrate.py
camera_calibration_data/: imgui.ini
client/: client.py  client_tracking.py
host_serial_control/: host.py  ik.py  moveo.URDF
install/: local_setup.sh  setup.sh
log/: latest_build
moveo_python_package/: setup.py
moveo_python_package/g11_moveo/: __init__.py  moveo.py  moveo_ik.py  tracking.py  transform.py
python_serial_control/: comm.py
resources/: complete_tracking_test.py
resources/arduino_stepper_controller/: arduino_stepper_controller.ino
resources/calibrate/: calibrate.py  points.csv
resources/host_serial_control/: client.py  complete_tracking_test.py  host.py  test.py
resources/moveo_python_package/g11_moveo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
resources/point_to_point/: p2p.py
resources/realsense-object-tracking/: align_depth2color.py  complete_tracking_test.py  track.py  tracking test.py
resources/stepper_ctrlv2/: stepper_ctrlv2.ino
stepper_control/: stepper_control.ino
stepper_control/ros_arduino_stepper/: ros_arduino_stepper.ino
stepper_ctrlv2/: stepper_ctrlv2.ino
(+15 files in other folders)
