<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_pkg</name>
  <version>0.0.0</version>
  <description>Package for image processing and motor control of robotic arm for Group 11 third year project 2023/24.</description>
  <maintainer email="n.stuart3@universityofgalway.ie">Neil Stuart</maintainer>
  <license>Apache-2.0</license>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>sensor_msgs std_msgs</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
